@@ -3,6 +3,7 @@
     ----------------------------
     + Fix generated functions/upgrade_queries.php queries (#3130);
     + Table layout not aligned (#3105,#3113);
+    + Invalid scan type () error (#2785);
 
     Security Fixes:
     ----------------------------
